; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/udf/extr_dir.c_udf_readdir.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/udf/extr_dir.c_udf_readdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i64, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.inode* }
%struct.inode = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c".\00", align 1
@DT_DIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, i64 (i8*, i8*, i32, i64, i32, i32)*)* @udf_readdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udf_readdir(%struct.file* %0, i8* %1, i64 (i8*, i8*, i32, i64, i32, i32)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64 (i8*, i8*, i32, i64, i32, i32)*, align 8
  %8 = alloca %struct.inode*, align 8
  %9 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 (i8*, i8*, i32, i64, i32, i32)* %2, i64 (i8*, i8*, i32, i64, i32, i32)** %7, align 8
  %10 = load %struct.file*, %struct.file** %5, align 8
  %11 = getelementptr inbounds %struct.file, %struct.file* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load %struct.inode*, %struct.inode** %14, align 8
  store %struct.inode* %15, %struct.inode** %8, align 8
  %16 = call i32 (...) @lock_kernel()
  %17 = load %struct.file*, %struct.file** %5, align 8
  %18 = getelementptr inbounds %struct.file, %struct.file* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %40

21:                                               ; preds = %3
  %22 = load i64 (i8*, i8*, i32, i64, i32, i32)*, i64 (i8*, i8*, i32, i64, i32, i32)** %7, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load %struct.file*, %struct.file** %5, align 8
  %25 = getelementptr inbounds %struct.file, %struct.file* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.inode*, %struct.inode** %8, align 8
  %28 = getelementptr inbounds %struct.inode, %struct.inode* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @DT_DIR, align 4
  %31 = call i64 %22(i8* %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1, i64 %26, i32 %29, i32 %30)
  %32 = icmp slt i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %21
  %34 = call i32 (...) @unlock_kernel()
  store i32 0, i32* %4, align 4
  br label %48

35:                                               ; preds = %21
  %36 = load %struct.file*, %struct.file** %5, align 8
  %37 = getelementptr inbounds %struct.file, %struct.file* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = add nsw i64 %38, 1
  store i64 %39, i64* %37, align 8
  br label %40

40:                                               ; preds = %35, %3
  %41 = load %struct.inode*, %struct.inode** %8, align 8
  %42 = load %struct.file*, %struct.file** %5, align 8
  %43 = load i64 (i8*, i8*, i32, i64, i32, i32)*, i64 (i8*, i8*, i32, i64, i32, i32)** %7, align 8
  %44 = load i8*, i8** %6, align 8
  %45 = call i32 @do_udf_readdir(%struct.inode* %41, %struct.file* %42, i64 (i8*, i8*, i32, i64, i32, i32)* %43, i8* %44)
  store i32 %45, i32* %9, align 4
  %46 = call i32 (...) @unlock_kernel()
  %47 = load i32, i32* %9, align 4
  store i32 %47, i32* %4, align 4
  br label %48

48:                                               ; preds = %40, %33
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @lock_kernel(...) #1

declare dso_local i32 @unlock_kernel(...) #1

declare dso_local i32 @do_udf_readdir(%struct.inode*, %struct.file*, i64 (i8*, i8*, i32, i64, i32, i32)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
